<?xml version="1.0" encoding="utf-8"?>
    <resources>
        <string name="app_name">WordsApp</string>
        <string name="login">Login</string>
        <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="sign">Sign in</string>
        <string name="word">Type a word</string>
        <string name="search">Search word</string>
        <string name="matches">Matches</string>

    </resources>