<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="150dp"
    android:paddingBottom="150dp"
    android:paddingLeft="48dp"
    android:paddingRight="48dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word" />

    <EditText
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <Button
        android:id="@+id/botonBusqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <Button
        android:id="@+id/botonCoincidencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matches" />

</LinearLayout>
